// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OfferHost > matches snapshot when host is not pro 1`] = `
<div>
  <div
    class="offer__host"
  >
    <h2
      class="offer__host-title"
    >
      Meet the host
    </h2>
    <div
      class="offer__host-user user"
    >
      <div
        class="offer__avatar-wrapper user__avatar-wrapper"
      >
        <img
          alt="Host avatar"
          class="offer__avatar user__avatar"
          height="74"
          src="https://example.com/avatar.jpg"
          width="74"
        />
      </div>
      <span
        class="offer__user-name"
      >
        John
      </span>
    </div>
    <div
      class="offer__description"
    >
      This is a wonderful place to stay.
    </div>
  </div>
</div>
`;

exports[`OfferHost > matches snapshot when host is pro 1`] = `
<div>
  <div
    class="offer__host"
  >
    <h2
      class="offer__host-title"
    >
      Meet the host
    </h2>
    <div
      class="offer__host-user user"
    >
      <div
        class="offer__avatar-wrapper user__avatar-wrapper offer__avatar-wrapper--pro"
      >
        <img
          alt="Host avatar"
          class="offer__avatar user__avatar"
          height="74"
          src="https://example.com/avatar.jpg"
          width="74"
        />
      </div>
      <span
        class="offer__user-name"
      >
        Jane
      </span>
      <span
        class="offer__user-status"
      >
        Pro
      </span>
    </div>
    <div
      class="offer__description"
    >
      This is a wonderful place to stay.
    </div>
  </div>
</div>
`;
